# indian-stock-market-analyzer

./: .dockerignore  .env.example  .gitignore  .replit  =1.0.0  AGENT_PROMPT.md  DEVELOPMENT_HISTORY.md  GITHUB_PUSH.md  README.md  SETUP.md  deploy.sh  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
attached_assets/: Pasted--15-70-59-Downloading-frozendict-2-4-7-py3-none-any-whl_1775821899516.txt  Pasted--28-frontend-builder-9-9-RUN-pnpm-filter-workspace-stoc_1775810835751.txt  Pasted--32-6-475-Download-and-installation-successful-32-6-475_1775811151071.txt  Pasted--36-backend-resolving-provenance-for-metadata-file-36-D_1775811380238.txt  Pasted-2026-04-10-17-41-27-067-docker-entrypoint-sh-docker-ent_1775823154815.txt  Pasted-26-2-631-vite-v7-3-2-building-client-environment-for-pr_1775821920845.txt  Pasted-Market-Sentiment-Analysis-Feature-for-an-Indian-Market-_1776008578495.txt  Pasted-Project-Brief-AI-Powered-Sector-Analytics-Financial-Too_1775788931772.txt  Pasted-Research-Report-Building-a-News-Update-Feature-for-an-I_1775798293350.txt  Pasted-Research-Report-Building-a-TradingView-like-Application_1775717476487.txt  Pasted-Revolutionizing-Investment-Strategy-An-App-Blueprint-fr_1775664510510.txt  Pasted-Set-up-the-Indian-Stock-Market-Analyzer-on-Replit-with-_1775793529261.txt  Pasted-The-Hydra-Alpha-Engine-A-Blueprint-for-Next-Generation-_1775666235774.txt  Pasted-import-requests-import-pandas-as-pd-import-yfinance-as-_1775661262653.txt
scripts/: package.json  push-to-github.mjs  setup-git-hook.sh
scripts/src/: pull-github.ts  (+3 more)
(+281 files in other folders)
