[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.44.0",
    "yfinance>=1.2.1",
]
