[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "fastapi>=0.110.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "scipy>=1.11.0",
    "spacy>=3.8.0",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.27.0",
    "yfinance>=0.2.48",
]
